--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "srpl",
-  "version": "1.0.0",
-  "description": "Easy replace with regexp in massive files without freeze using node",
+  "version": "1.0.1",
+  "description": "Easgit add README.mdy replace with regexp in massive files without freeze using node",
   "main": "index.js",
   "scripts": {
-    "repl": "node index.js"
+    "srpl": "node index.js"
   },
   "author": "",
   "license": "ISC",
